Fix alignment issue on grouped grid
Fixes RM-7078

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -281,6 +281,10 @@
 	padding-top: 2px;
 }
 
+.slick-group > .slick-cell-checkboxsel {
+	 text-align: inherit;
+}
+
 .slick-header-column.integer,
 .slick-header-column.decimal,
 .slick-cell.integer,
